Assignment/assignment1/src/main/bkool/parser/.antlr/BKOOLParser.java
// Generated from /Users/duyanhle/Desktop/BKU/223/PPL/Assignment/assignment1/src/main/bkool/parser/BKOOL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BKOOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, BREAK=2, CLASS=3, CONTINUE=4, DO=5, ELSE=6, EXTENDS=7, FLOAT=8, 
		IF=9, INT=10, NEW=11, STRING=12, THEN=13, FOR=14, RETURN=15, TRUE=16, 
		FALSE=17, VOID=18, NIL=19, THIS=20, FINAL=21, STATIC=22, TO=23, DOWNTO=24, 
		ADD_OP=25, SUB_OP=26, MUL_OP=27, FLODIV_OP=28, INTDIV_OP=29, MOD_OP=30, 
		EQUAL_OP=31, NEQUAL_OP=32, LT_OP=33, GT_OP=34, LTE_OP=35, GTE_OP=36, OR_OP=37, 
		AND_OP=38, NOT_OP=39, CONCAT_OP=40, ASSIGN_OP=41, EQUAL_SIGN=42, LSB=43, 
		RSB=44, LP=45, RP=46, LB=47, RB=48, SEMI=49, COLON=50, DOT=51, COMMA=52, 
		ID=53, WS=54, LINE_COMMENT=55, BLOCK_COMMENT=56, INTLIT=57, FLOATLIT=58, 
		STRINGLIT=59, UNCLOSE_STRING=60, ILLEGAL_ESCAPE=61, ERROR_CHAR=62;
	public static final int
		RULE_program = 0, RULE_classDeclList = 1, RULE_classDecl = 2, RULE_classExtends = 3, 
		RULE_classBody = 4, RULE_classMemberList = 5, RULE_classMember = 6, RULE_methodDecl = 7, 
		RULE_constructor = 8, RULE_normalMethod = 9, RULE_typ = 10, RULE_paramDecl = 11, 
		RULE_paramList = 12, RULE_paramPrime = 13, RULE_param = 14, RULE_idlist = 15, 
		RULE_attrDecl = 16, RULE_immutDecl = 17, RULE_mutDecl = 18, RULE_mutKeyword = 19, 
		RULE_immutKeywords = 20, RULE_attrList = 21, RULE_attrMember = 22, RULE_attrInit = 23, 
		RULE_arrayLit = 24, RULE_arrMemberList = 25, RULE_arrMember = 26, RULE_booleanLit = 27, 
		RULE_expr = 28, RULE_expr1 = 29, RULE_expr2 = 30, RULE_expr3 = 31, RULE_expr4 = 32, 
		RULE_expr5 = 33, RULE_expr6 = 34, RULE_expr7 = 35, RULE_expr8 = 36, RULE_expr9 = 37, 
		RULE_expr10 = 38, RULE_expr11 = 39, RULE_arglist = 40, RULE_argprime = 41, 
		RULE_primiLit = 42, RULE_subexpr = 43, RULE_stmtlist = 44, RULE_stmt = 45, 
		RULE_blockstmt = 46, RULE_vardecllist = 47, RULE_vardecl = 48, RULE_immutVardecl = 49, 
		RULE_mutVardecl = 50, RULE_asmstmt = 51, RULE_asmlhs = 52, RULE_ifstmt = 53, 
		RULE_forstmt = 54, RULE_breakstmt = 55, RULE_contstmt = 56, RULE_retstmt = 57, 
		RULE_methodivkstmt = 58, RULE_primiTyp = 59, RULE_classTyp = 60, RULE_arrayTyp = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDeclList", "classDecl", "classExtends", "classBody", 
			"classMemberList", "classMember", "methodDecl", "constructor", "normalMethod", 
			"typ", "paramDecl", "paramList", "paramPrime", "param", "idlist", "attrDecl", 
			"immutDecl", "mutDecl", "mutKeyword", "immutKeywords", "attrList", "attrMember", 
			"attrInit", "arrayLit", "arrMemberList", "arrMember", "booleanLit", "expr", 
			"expr1", "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
			"expr9", "expr10", "expr11", "arglist", "argprime", "primiLit", "subexpr", 
			"stmtlist", "stmt", "blockstmt", "vardecllist", "vardecl", "immutVardecl", 
			"mutVardecl", "asmstmt", "asmlhs", "ifstmt", "forstmt", "breakstmt", 
			"contstmt", "retstmt", "methodivkstmt", "primiTyp", "classTyp", "arrayTyp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'boolean'", "'break'", "'class'", "'continue'", "'do'", "'else'", 
			"'extends'", "'float'", "'if'", "'int'", "'new'", "'string'", "'then'", 
			"'for'", "'return'", "'true'", "'false'", "'void'", "'nil'", "'this'", 
			"'final'", "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", "'/'", 
			"'\\'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'||'", 
			"'&&'", "'!'", "'^'", "':='", "'='", "'['", "']'", "'{'", "'}'", "'('", 
			"')'", "';'", "':'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOLEAN", "BREAK", "CLASS", "CONTINUE", "DO", "ELSE", "EXTENDS", 
			"FLOAT", "IF", "INT", "NEW", "STRING", "THEN", "FOR", "RETURN", "TRUE", 
			"FALSE", "VOID", "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", "ADD_OP", 
			"SUB_OP", "MUL_OP", "FLODIV_OP", "INTDIV_OP", "MOD_OP", "EQUAL_OP", "NEQUAL_OP", 
			"LT_OP", "GT_OP", "LTE_OP", "GTE_OP", "OR_OP", "AND_OP", "NOT_OP", "CONCAT_OP", 
			"ASSIGN_OP", "EQUAL_SIGN", "LSB", "RSB", "LP", "RP", "LB", "RB", "SEMI", 
			"COLON", "DOT", "COMMA", "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
			"INTLIT", "FLOATLIT", "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
			"ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BKOOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BKOOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclListContext classDeclList() {
			return getRuleContext(ClassDeclListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BKOOLParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			classDeclList();
			setState(125);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclListContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public ClassDeclListContext classDeclList() {
			return getRuleContext(ClassDeclListContext.class,0);
		}
		public ClassDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclList; }
	}

	public final ClassDeclListContext classDeclList() throws RecognitionException {
		ClassDeclListContext _localctx = new ClassDeclListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclList);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				classDecl();
				setState(128);
				classDeclList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(BKOOLParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public ClassExtendsContext classExtends() {
			return getRuleContext(ClassExtendsContext.class,0);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(CLASS);
			setState(134);
			match(ID);
			setState(135);
			classExtends();
			setState(136);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassExtendsContext extends ParserRuleContext {
		public TerminalNode EXTENDS() { return getToken(BKOOLParser.EXTENDS, 0); }
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public ClassExtendsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classExtends; }
	}

	public final ClassExtendsContext classExtends() throws RecognitionException {
		ClassExtendsContext _localctx = new ClassExtendsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classExtends);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXTENDS:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(EXTENDS);
				setState(139);
				match(ID);
				}
				break;
			case LP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(BKOOLParser.LP, 0); }
		public ClassMemberListContext classMemberList() {
			return getRuleContext(ClassMemberListContext.class,0);
		}
		public TerminalNode RP() { return getToken(BKOOLParser.RP, 0); }
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LP);
			setState(144);
			classMemberList();
			setState(145);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassMemberListContext extends ParserRuleContext {
		public ClassMemberContext classMember() {
			return getRuleContext(ClassMemberContext.class,0);
		}
		public ClassMemberListContext classMemberList() {
			return getRuleContext(ClassMemberListContext.class,0);
		}
		public ClassMemberListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMemberList; }
	}

	public final ClassMemberListContext classMemberList() throws RecognitionException {
		ClassMemberListContext _localctx = new ClassMemberListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classMemberList);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case FLOAT:
			case INT:
			case STRING:
			case VOID:
			case FINAL:
			case STATIC:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				classMember();
				setState(148);
				classMemberList();
				}
				break;
			case RP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassMemberContext extends ParserRuleContext {
		public AttrDeclContext attrDecl() {
			return getRuleContext(AttrDeclContext.class,0);
		}
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classMember);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				attrDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				methodDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodDeclContext extends ParserRuleContext {
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public NormalMethodContext normalMethod() {
			return getRuleContext(NormalMethodContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodDecl);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				constructor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				normalMethod();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public ParamDeclContext paramDecl() {
			return getRuleContext(ParamDeclContext.class,0);
		}
		public BlockstmtContext blockstmt() {
			return getRuleContext(BlockstmtContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(ID);
			setState(162);
			paramDecl();
			setState(163);
			blockstmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalMethodContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public ParamDeclContext paramDecl() {
			return getRuleContext(ParamDeclContext.class,0);
		}
		public BlockstmtContext blockstmt() {
			return getRuleContext(BlockstmtContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(BKOOLParser.STATIC, 0); }
		public NormalMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalMethod; }
	}

	public final NormalMethodContext normalMethod() throws RecognitionException {
		NormalMethodContext _localctx = new NormalMethodContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_normalMethod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STATIC:
				{
				setState(165);
				match(STATIC);
				}
				break;
			case BOOLEAN:
			case FLOAT:
			case INT:
			case STRING:
			case VOID:
			case ID:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(169);
			typ();
			setState(170);
			match(ID);
			setState(171);
			paramDecl();
			setState(172);
			blockstmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypContext extends ParserRuleContext {
		public PrimiTypContext primiTyp() {
			return getRuleContext(PrimiTypContext.class,0);
		}
		public ClassTypContext classTyp() {
			return getRuleContext(ClassTypContext.class,0);
		}
		public ArrayTypContext arrayTyp() {
			return getRuleContext(ArrayTypContext.class,0);
		}
		public TerminalNode VOID() { return getToken(BKOOLParser.VOID, 0); }
		public TypContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typ; }
	}

	public final TypContext typ() throws RecognitionException {
		TypContext _localctx = new TypContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_typ);
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				primiTyp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				classTyp();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				arrayTyp();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				match(VOID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamDeclContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(BKOOLParser.LB, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode RB() { return getToken(BKOOLParser.RB, 0); }
		public ParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDecl; }
	}

	public final ParamDeclContext paramDecl() throws RecognitionException {
		ParamDeclContext _localctx = new ParamDeclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_paramDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(LB);
			setState(181);
			paramList();
			setState(182);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public ParamPrimeContext paramPrime() {
			return getRuleContext(ParamPrimeContext.class,0);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_paramList);
		try {
			setState(186);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case FLOAT:
			case INT:
			case STRING:
			case VOID:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				paramPrime();
				}
				break;
			case RB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamPrimeContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public ParamPrimeContext paramPrime() {
			return getRuleContext(ParamPrimeContext.class,0);
		}
		public ParamPrimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramPrime; }
	}
